header is now fixed. planet_modal now covering main

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,7 @@
 header {
+  position: fixed;
+  z-index: 1;
+  background: black;
   border-bottom: 1px solid white;
   height: 5em;
   width: 100vw;
